part1/pogger/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pogger-svc
spec:
  type: ClusterIP
  selector:
    app: pogger
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
