part1/pogger/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pogger-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: pogger-svc
          servicePort: 2345
